# admcp-media-app

./: .gitignore  A2A_DEMO_APP_GUIDE.md  A2A_HEROKU_DEPLOYMENT.md  A2A_IMPLEMENTATION_PLAN.md  ADCP_COMPLIANCE_IMPLEMENTATION_PLAN.md  ADCP_DATACLOUD_INTEGRATION_PATTERNS.md  BUILD_PHASE_1_DATABASE.md  BUILD_PHASE_2_MCP_SERVER.md  COMPLETE_SYSTEM_DOCUMENTATION.md  DATABASE_SETUP_GUIDE.md  DATA_CLOUD_INTEGRATION_COMPLETE.md  DENTSU_YAHOO_NIKE_ARCHITECTURE.md  GIT_SETUP_COMMANDS.md  MCP-A2A-Architecture-Guide.md  NIKE_A2A_TEST_COMMANDS.md  NIKE_CAMPAIGN_WORKFLOW_LOG.md  PHASE_2_COMMANDS.md  PHASE_2_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  README_Media_Workflow.md  SALESFORCE_MEDIA_CLOUD_PITCH.md  SNOWFLAKE_FIRST_ARCHITECTURE.md  TECHNOLOGY_BUSINESS_VISION.md  VALIDATION_COMPLETE.md  YAHOO_A2A_TEST_STATUS.md  YAHOO_DEMO_SCRIPT.md  YAHOO_VISION_MAPPING.md  yahoo_a2a_server.py
yahoo_mcp_server/: .deploy  .gitignore  AGENTIC_EXPERIENCE_GUIDE.md  DEPLOYMENT_INFO.md  HEROKU_DEPLOYMENT.md  Procfile  README.md  SETUP_COMPLETE.md  STREAMLIT_HEROKU_DEPLOYMENT.md  STREAMLIT_README.md  advertising_agent.py  env.template  models.py  nike_campaign_workflow.py  nike_campaign_workflow_http_client.py  pyproject.toml  requirements.txt  server.py  server2.py  server_http.py  slack_app.py  streamlit_app.py  test_mcp_client.py  test_yahoo_a2a_local.py  yahoo-agent-card.json  yahoo_a2a_server.py
yahoo_mcp_server/automation/: README.md  __init__.py  audit.py  cem_agent.py  validators.py
yahoo_mcp_server/services/: datacloud_auth_service.py  media_buy_service.py  (+4 more)
(+29 files in other folders)
